--- a/gb/25/2/16/n14438624.md
+++ b/gb/25/2/16/n14438624.md
@@ -22,7 +22,8 @@
 <p>一名网友表示，“根本就不是几棍子的事，暴力教育只能教育出暴力狂，有些老师拳打脚踢，给我家孩子都留下阴影了，堪比校园霸凌 ?。”</p>
 <p>另一名网友认为，“权威至上的管理思维，将学生视为需被规训的客体，其规定多以控制、惩罚和排斥为手段，与以人为中心的教育理念严重背离。真正的教育应建立在信任、对话与共情的基础上，而非通过高压手段制造表面的秩序。”</p>
 <h2>广东一中学让学生签字承诺自杀与校无关</h2>
-<p>无独有偶，在中共洗脑教育下，近年来大陆学校霸凌现象严重，导致学生跳楼、自杀事件频发。就在两个月前，有网民通过社交平台曝光广东梅州市五华县水寨中学要求所有学生签“承诺书”，承诺书中提到：“如果我出现自残、自杀的行为均与学校无关，我本人及家长或监护人不会以任何理由向学校及学校工作人员主张任何损失和赔偿，也不会干扰学校正常教学秩序。”</p>
+<p>在中共洗脑教育下，大陆学校近年霸凌现象严重，导致学生跳楼、自杀事件频发。</p>
+<p>就在两个月前，有网民通过社交平台曝光广东省梅州市五华县水寨中学要求所有学生签“承诺书”，承诺书中提到：“如果我出现自残、自杀的行为均与学校无关，我本人及家长或监护人不会以任何理由向学校及学校工作人员主张任何损失和赔偿，也不会干扰学校正常教学秩序。”</p>
 <p>对此，网易发表的一篇评论文章表示，这场打着“珍爱生命”幌子的所谓主题班会，本质上是校方“精心谋划”的一场“甩锅”大会，试图通过这种方式给自己加上一层保护，来和未来不确定的学生自杀事件撇清干系。</p>
 <p>责任编辑：郑浩宇#</p>
 <h3>推荐阅读</h3>
@@ -30,34 +31,39 @@
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/21/9/1/n13203664.md#1" target="_blank" rel="noopener">黑龙江高校6名学生干部查寝耍官威 引热议</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273634.md#1" target="_blank" rel="noopener">复旦大学学位授予仪式上 学生打老师泄不满</a><br />
 <span style="color: #0000ff;">．<a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372258.md#1" target="_blank" rel="noopener">云南中学生艺术节开幕式上斥责学校被强行拉走</a> </span></span></span></span></h3>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/16/n13713356.md#1">“大学生如厕要预约”上海极端防疫酿恶果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/24/n13937576.md#1">中共两会提案 曝光中国教师兼职“五毛工作”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/18/n14253356.md#1">外国学生享受奖学金故意不毕业？ 山西大学爆丑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14438009.md#1">“蚂蚁消金”连抛坏帐 欠账违约者年轻化</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/27/n3693107.md#1" target="_blank">一诺：中共假“关爱”之名对青少年的洗脑迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554901.md#1">“白袍战将”薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554945.md#1">上马杀敌 下马写书的猛将薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432721.md#1">传承二千年 元宵节俗内涵由来知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431324.md#1">中华情人节&#8211;元宵  灯火盛会辉映深刻内涵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434141.md#1">【未解之谜】两度濒死奇迹复活 名律师发现生命的真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437491.md#1">【菁英论坛】神韵令欧洲惊艳 中共干扰徒留笑柄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437423.md#1">【唐青看时事】美俄关系破冰 习进退两难</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14437520.md#1">【佳音时刻】俄乌停战有新突破？中南海失据</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437163.md#1">把手机充电到100% 会损害电池吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436703.md#1">美杜鲁门号航母在埃及和商船相撞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437046.md#1">大陆车厘子价格跌破10元 销售已接近尾声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436796.md#1">举国炒作《哪吒2》大陆票房井喷背后引争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437504.md#1">票房大翻车 红片《蛟龙行动》官宣撤档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436491.md#1">50岁大陆演员高亮突发疾病去世 消息上热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14438015.md#1">会否与赵丽颖三度搭戏 林更新高情商回应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437488.md#1">章子怡当综艺评委 被这些演员浮夸表演惹怒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437085.md#1">英国医生披露 死而复活的人学到什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/15/n14437904.md#1">【健康1+1】全球流感警报！高致命禽流感H5N1爆发！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/9/n14432902.md#1">长者健康生活仍高血压？ 抗发炎是关键</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436659.md#1">【健康1+1】抗流感：用对方法退烧 止咳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/16/n14438624.htm">广东一中学校规被曝设“鞭罚” 要求家长同意</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438624.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
